fixed css spacing issues. changed skills data to be more general and tech facing

--- a/src/index.css
+++ b/src/index.css
@@ -45,9 +45,10 @@ ul,li {
 .section-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: left;
-  margin-left: 7%;
+  justify-content: center;
+  margin: 0 7%;
   line-height: 1.5em;
+  text-align: center;
 }
 .icon {
   height: 32px;
@@ -81,13 +82,21 @@ nav, footer {
 .header-title {
   font-size: 40px;
 }
+.header-links {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+}
 .header-link {
   display: flex;
   align-items: center;
+  flex: 1 0 21%; /* explanation below */
+  margin: 5px;
+  min-width: 120px;
 }
 .header-link:hover {
   color: #99F744;
-  font-size: 22px;
+  /* font-size: 22px; */
 }
 .header-icon {
   height: 48px;
@@ -119,10 +128,13 @@ nav, footer {
   margin: 5% 0;
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 .project-header {
   display: flex;
   align-items: baseline;
+  justify-content: center;
+  margin-top: 17px;
 }
 .project-info {
   flex: 2 0 0;
@@ -151,12 +163,15 @@ nav, footer {
 .project-stack {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 3%;
 }
 .tech {
-  margin: 2% 1%;
+  margin: 1px;
   display: flex;
   align-items: center;
   width: 135px;
+  justify-content: center;
 }
 
 /* Skills */
@@ -165,10 +180,21 @@ nav, footer {
   /* background-color: #F7F7F7; */
   background-color: #ECECEC;
 }
-.section-container > .skill {
-  width: 135px;
-  margin: 1%;
+.skill {
+  justify-content: center;
+}
+.skills-container {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 7%;
+  line-height: 1.5em;
+}
+.skills-container > .skill {
+  flex: 1 0 19%;
+  display: flex;
+  min-width: 120px;
+  margin: 1% 1%;
   align-items: center;
 }
 
@@ -201,10 +227,23 @@ nav, footer {
 
 @media only screen and (max-width: 600px) {
   .section-container {
-    margin-left: 4%;
+    margin: 1%;
   }
   .section-title {
     margin: 2%;
+  }
+  .project-header {
+    margin-top: 0;
+  }
+  .project-description {
+    margin-top: 3%;
+  }
+  .header-links {
+    margin-left: 0;
+    justify-content: center;
+  }
+  .section-title, .header-sub-title, .header-title {
+    text-align: center;
   }
 }
 
